# imm-vim-benchmark

./: .gitignore  README.md  pyproject.toml
benchmark_vim/: __init__.py  analysis.py  cli.py  comparison.py  diagnostics.py  executive_summary.py  functional.py  grid_search.py  presets.py  registry.py  results.py  riemann_report.py  riemann_variants.py
benchmark_vim/experiments/: __init__.py  offline_pair.py  riemann_sweep.py  sanity_check.py  synthetic_spectrum.py
outputs/comparison/: curves.csv  curves.json  summary.csv  summary.json
outputs/csv/: offline_pair_test.csv  riemann_logxi_symmetry_mismatch.csv  riemann_principal_value.csv  riemann_receiver_width_cost.csv  riemann_regularized_log.csv  riemann_sweep.csv  riemann_zero_attraction.csv  riemann_zero_density_symmetry_mismatch.csv  sanity_check.csv  synthetic_spectrum.csv
outputs/diagnostics/: riemann_diagnostics.json  riemann_diagnostics.md
outputs/grid/: leaderboard.csv  leaderboard.json  leaderboard.md
outputs/json/: offline_pair_test.json  riemann_logxi_symmetry_mismatch.json  riemann_principal_value.json  riemann_receiver_width_cost.json  riemann_regularized_log.json  riemann_sweep.json  riemann_zero_attraction.json  riemann_zero_density_symmetry_mismatch.json  sanity_check.json  summary.json  synthetic_spectrum.json
outputs/reports/: ea_asset_valuation.md  ip_asset_valuation.md  ip_monetization_inventory.md  low_hanging_fruit_map.md  mcp_translation_layer_build_plan.md  mcp_translation_layer_schema.md  persona_marketplace_policy.md  riemann_family_comparison.json  (+6 more)
scripts/: run_benchmark.py
(+8 files in other folders)
