[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vim-benchmark"
version = "0.1.0"
description = "Local VIM optimization benchmark engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "mpmath>=1.3",
]

[project.optional-dependencies]
scipy = ["scipy>=1.10"]

[project.scripts]
vim-benchmark = "benchmark_vim.cli:main"
translator-hub = "translator_hub.server:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["benchmark_vim*", "translator_hub*"]

[tool.setuptools.package-data]
"translator_hub" = ["web/*.html"]
